--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "ng build --prod --base-href https://gathumartins.github.io/shopsoko/ && angular-cli-ghpages --branch gh-pages"
+    "deploy": "ng build --prod --base-href https://gathumartins.github.io/soko/ && angular-cli-ghpages --branch gh-pages"
   },
   "private": true,
   "dependencies": {
